# toolbox

./: .clang-format  .gitignore  docker_cheatsheet.md  python_cheatsheet.md
cnn/: CNN.py  ConvPool.py  DataReader.py
cnn/test/: TestDataReader.py  train.txt
cppnotes/: CMakeLists.txt
dotnet/: FileLock.cs  FileUtils.cs  Logger.cs  ServiceCallDecorator.cs  Singleton.cs
language_understanding/: README.md  Setup.py  SetupCFGParser.py  SetupDialog.py  SetupIntent.py  SetupS2S.py  SetupSlot.py  files.txt  install.sh  test.sh
language_understanding/cfgparser/: CFGParserPy.cpp  CFGParserPy.pyx  cfgparser.sln
language_understanding/cfgparser/cfgparser/: CFGParser.cpp  CFGParser.h  NodeMatcher.cpp  NodeMatcher.h  ReadMe.txt  Str.h  cfgparser.vcxproj  (+1 more)
language_understanding/dialog/: Context.py  Event.py  Intent.py  Parameter.py  Session.py  Task.py  TestCoro.py
language_understanding/featurizer/: CFGFeaturizer.py  FeatureShifter.py  Featurizer.py  NGramFeaturizer.py
language_understanding/intent/: IntentCNN.py
language_understanding/lccrf/: LCCRFPy.cpp  LCCRFPy.pyx
language_understanding/s2s/: DataReader.py  DecoderWithAttention.py  Encoder.py  Seq2SeqWithAttention.py
language_understanding/slot/: SlotLCCRF.py  log.py
lfhashmap/: lfhashmap.h  lfhashmap.sln
lfhashmap/lfhashmap/: lfhashmap.vcxproj  lfhashmap.vcxproj.filters
protobuf_dym_compile/: CMakeLists.txt  main.cpp
protobuf_dym_compile/proto/pkg/: query.proto  service.proto
scope_guard/: scope_guard.h
shell/: .bash_profile  .inputrc  .vimrc  bash.md  cmd.md  cygwin.md  sed_awk.md  ubuntu_initenv.md  ubuntu_on_windows.md  vim.md
str_fmt/: CMakeLists.txt  main.cpp  snprintf.h
tf_sample/: embedding_lookup.py  mat_add.py  mat_mul.py  mat_reduce_sum.py  one_hot.py  sparse_softmax_cross_entropy_with_logits.py  while_loop.py
utf/: CMakeLists.txt  main.cpp  utf.h  utf_iconv.h
(+94 files in other folders)
